--- a/config/config.yaml
+++ b/config/config.yaml
@@ -187,6 +187,6 @@ platforms:
   - id: "juejin.cn"
     name: "稀土掘金"
   - id: "Github"
-    name: "github.com"
-    - id: "雪球"
-    name: "xueqiu.com"
+    name: "github"
+  - id: "雪球"
+    name: "xueqiu"
